fix overflow content in profilepage

--- a/src/app/page/profile-page/profile-page.component.css
+++ b/src/app/page/profile-page/profile-page.component.css
@@ -4,7 +4,7 @@ input:focus-visible {
 
 .profile-container {
   background-image: url(/assets/imgs/profile_card.png);
-  height: 100%;
+  min-height:500px;
   width: 1356px;
   display: flex;
   /* align-items: center; */
@@ -15,7 +15,7 @@ input:focus-visible {
   left: 50%;
   transform: translate(-50%, -50%);
   align-items: flex-start;
-  margin-top: 30px;
+  background-size: cover;
 }
 
 .bg {
@@ -31,7 +31,7 @@ input:focus-visible {
 
 .scrollable-content {
   position: relative;
-  height: 100%;
+  min-height: 120vh;
   overflow-y: auto;
 }
 
@@ -98,6 +98,7 @@ input:focus-visible {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
 }
 
 .left-content {
@@ -141,5 +142,7 @@ select.input-select:focus {
   box-shadow: none; /* Remove any shadow applied on focus */
 }
 
-input:disabled{
+input:disabled,option:disabled, select:disabled { 
+  color: darkblue;
 }
+
